--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "3"
+version: '3'
 services:
   ml:
-    container_name: "ml"
+    container_name: 'ml'
     build: .
     devices:
       - /dev/kfd
@@ -10,11 +10,11 @@ services:
       - seccomp=unconfined
     cap_add:
       - SYS_PTRACE
-    ipc: "host"
-    network_mode: "host"
-    command: "/bin/bash"
+    ipc: 'host'
+    network_mode: 'host'
+    command: '/bin/bash'
     tty: true
     stdin_open: true
     volumes:
-      - .:/ml
-    working_dir: /ml
+      - .:/workspace:cached
+    working_dir: /workspace
